--- a/Cogs/components.json
+++ b/Cogs/components.json
@@ -14,14 +14,14 @@
             "https://media.giphy.com/media/S60PZgDyT51DAlgPCM/giphy.gif"
         ],
         "messages" : [
-            "Hope you like your mashmallows with extra flavour as yours is burnt from the fire",
-            "The best way to enjoy smores is with friends",
-            "Oops, Your marshmallow burnt while you were singing a campfire song",
-            "Oh look a shooting stat, Oh no that look away burnt your mashmallow",
-            "Nothing tastes as good as a delcious camp fire cooked marshmallow",
-            "Lets have a fluffly bunny compertitiion with marshmallows lets see who wins.",
-            "mmmmmmmmmmarshmallow, get in my tummy now!",
-            "Whats squishy and full of sugar? Marshmallows"
+            "Your eyes were distracted by a dementor looking shape in the trees. You burnt your mashmallow.",
+            "The best way to enjoy marshmallow is with friends oh look fellow Hedwig Haven members coming to join you.",
+            "WOW a shooting star, it must be your lucky day shooting stars and marshmallows.",
+            "INCENDIO, lets get thhis camp fire started to roast these marshmallows.",
+            "A large gathering and people having fun lets hope *Umbridge* doesnt hear about this. We better eat the evidence",
+            "Did you know that in the 1989–1990 school year at the Romanian Dragon Sanctuary *Bill Weasley* and his gang ate mashmallows by the campire just like you! ",
+            "During 1991-1992 school year both Harry and Ron roasted marshmallows, I wonder if they played fluffy bunnies.",
+            "What is made of sugar, water, and gelatin and in a cyclinder shape? Marshmallows."
         ]
 
     }
